I made the number of times the table blinks random

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <h1>Give the number</h1>
             <input type="text" id="number">
         </div>
-        <p id="right" class="hello">Hurray!, You gave the right number</p>
+        <p id="right" class="hello">Hurray!, You gave the right number <button onclick="yourFunction()">Try Again</button></p>
         <p id="low" class="hello">That is too low, try again <button onclick="yourFunction()">Try Again</button></p>
         <p id="high" class="hello">That is too high, try again <button onclick="yourFunction()">Try Again</button></p>
         <input type="button" value="submit" onclick="myFunction()">
