--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
         <p id="whyno" class="none">Please give it a try <button onclick="displayFunction()">okay</button></p>
         <div class="display">
             <h1>Give the number</h1>
-            <input type="text" id="number">
+            <input type="text" required id="number">
         </div>
         <p id="right" class="hello">Hurray!, You gave the right number <button onclick="yourFunction()">Try Again</button></p>
         <p id="low" class="hello">That is too low, try again <button onclick="yourFunction()">Try Again</button></p>
         <p id="high" class="hello">That is too high, try again <button onclick="yourFunction()">Try Again</button></p>
+        <p id="none" class="hello">Please input a number first, try again <button onclick="yourFunction()">Try Again</button></p>
         <input type="button" value="submit" onclick="myFunction()">
     </div>
     <script src="./Assets/js/guess.js"></script>
