--- a/index.html
+++ b/index.html
@@ -19,17 +19,19 @@
         <div class="canyou"><a href="#" onclick="displayFunction()">Yes</a> / <a href="#" onclick="noFunction()">No</a></div>
         <p class="none" id="ready">Get Ready!!!</p>
         <p id="whyno" class="none">Please give it a try <button onclick="displayFunction()">okay</button></p>
-        <div class="display">
+        <div id="display">
             <h1>Give the number</h1>
             <input type="text" required id="number">
         </div>
-        <p id="right" class="hello">Hurray!, You gave the right number <button onclick="yourFunction()">Try Again</button></p>
+        <p id="right" class="hello">Hurray!, You gave the right number <button onclick="again()">Play Again</button></p>
         <p id="low" class="hello">That is too low, try again <button onclick="yourFunction()">Try Again</button></p>
         <p id="high" class="hello">That is too high, try again <button onclick="yourFunction()">Try Again</button></p>
         <p id="none" class="hello">Please input a number first, try again <button onclick="yourFunction()">Try Again</button></p>
-        <input type="button" value="submit" onclick="myFunction()">
+        <input type="button" value="submit" id="submit" onclick="myFunction()">
     </div>
+    <p id="maintain">This project was built and is being maintained by <a href="https://taiwojoshua.netlify.app/" target="_blank">Taiwo Joshua</a></p>
+    <script src="./Assets/js/jquery.js"></script>
+    <script src="./Assets/js/confetti.js"></script>
     <script src="./Assets/js/guess.js"></script>
 </body>
-
 </html>
